# Spelet-Python

./: .gitignore  CMakeLists.txt  README.md
Output/Windows64/Release/: BearLibTerminal.exp  BearLibTerminal.lib
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Spelet.sln  Spelet.vcxproj  Spelet.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  miniaudio.vcxproj  miniaudio.vcxproj.filters
build-msvc/Spelet.dir/Release/: Spelet.exe.recipe
build-msvc/Spelet.dir/Release/Spelet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/bearlibterminal_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BearLibTerminal.sln  BearLibTerminal.vcxproj  BearLibTerminal.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
build-msvc/bearlibterminal_build/BearLibTerminal.dir/Release/: BearLibTerminal.dll.recipe
build-msvc/bearlibterminal_build/BearLibTerminal.dir/Release/BearLibTerminal.tlog/: BearLibTerminal.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/bearlibterminal_build/Dependencies/FreeType/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  freetype2.sln  freetype2.vcxproj  freetype2.vcxproj.filters
build-msvc/bearlibterminal_build/Dependencies/FreeType/freetype2.dir/Release/freetype2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  freetype2.lastbuildstate
build-msvc/bearlibterminal_build/Dependencies/PicoPNG/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  picopng.sln  picopng.vcxproj  picopng.vcxproj.filters
build-msvc/bearlibterminal_build/Dependencies/PicoPNG/picopng.dir/Release/picopng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  picopng.lastbuildstate
build-msvc/lib/Release/: freetype2.lib  miniaudio.lib  picopng.lib
build-msvc/miniaudio.dir/Release/: miniaudio.lib.recipe
build-msvc/miniaudio.dir/Release/miniaudio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  miniaudio.lastbuildstate
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: attack.hpp  audio.cpp  audio.hpp  entity.hpp  inventory.cpp  inventory.hpp  item.hpp  main.cpp  soundManager.cpp
